--- a/src/app/pages/event-home/event-home.html
+++ b/src/app/pages/event-home/event-home.html
@@ -1,9 +1,16 @@
 <article>
   <h1>Timeline</h1>
-  <section class="filter-section">
-    <label for="filter">Search events</label>
-    <input type="text" class="search-input" placeholder="Search" #filter (input)="filterResults(filter.value)"/>
-  </section>
+  
+  <app-search-filter 
+    searchLabel="Search events"
+    searchPlaceholder="Search"
+    [filterConfig]="filterConfig"
+    [allCharacters]="allCharacters"
+    [allStories]="allStories"
+    [allLocations]="allLocations"
+    (filterChange)="onFilterChange($event)">
+  </app-search-filter>
+  
   <button class="primary add-button" (click)="addWorldEvent()">Add Event</button>
 
   <section class="results">
