--- a/src/app/pages/story-home/story-home.html
+++ b/src/app/pages/story-home/story-home.html
@@ -1,9 +1,15 @@
 <article>
   <h1>Stories</h1>
-  <section class="filter-section">
-    <label for="filter">Search stories</label>
-    <input type="text" class="search-input" placeholder="Search" #filter (input)="filterResults(filter.value)"/>
-  </section>
+  
+  <app-search-filter 
+    searchLabel="Search stories"
+    searchPlaceholder="Search"
+    [filterConfig]="filterConfig"
+    [allCharacters]="allCharacters"
+    [allLocations]="allLocations"
+    (filterChange)="onFilterChange($event)">
+  </app-search-filter>
+  
   <button class="primary" (click)="addWorldStory()">Add Story</button>
 
   <section class="results">
