--- a/src/app/thumbnail/thumbnail.css
+++ b/src/app/thumbnail/thumbnail.css
@@ -53,7 +53,7 @@
 .thumbnail-tags {
   width: fit-content;
   margin: 1px;
-  padding: 3px;
+  padding: 3px 8px 3px 3px;
   font-size: x-small;
   font-style: italic;
   color: var(--b2-color);
