--- a/src/app/pages/pages.css
+++ b/src/app/pages/pages.css
@@ -1,9 +1,14 @@
 /* Shared Home Page Styles */
 
 .results {
-  display: grid;
+  /* display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 1rem;
+  gap: 1rem; */
+  border: none;
+  border-radius: 8px;
+  margin-top: 20px;
+  border-top: 1px solid var(--g4-color);
+  border-bottom: 1px solid var(--g4-color);
 }
 
 .no-results {
