--- a/src/styles.css
+++ b/src/styles.css
@@ -220,6 +220,22 @@ label {
   margin-bottom: 5px;
 }
 
+select {
+  display: block;
+  background-color: inherit;
+  border: none;
+  border-bottom: solid 1px var(--g3-color);
+  margin-bottom: 15px;
+  border-radius: 8px;
+
+  font-family: var(--headings-font-family);
+
+  &:focus {
+    outline: none;
+    background-color: var(--b5-color);
+  }
+}
+
 input[type="checkbox"] {
   width: fit-content;
   margin-left: 10px;
@@ -332,24 +348,53 @@ textarea {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: var(--g2-color);
   padding: 10px;
   border: none;
   border-radius: 50px;
   cursor: pointer;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000; /* Ensure it stays on top */
   transition: all 0.3s ease;
-/* end floating */
-  &:hover {
-    box-shadow: var(--shadow-color) 2px 2px 10px;
-    background-color: var(--g3-color);
+
+  .primary {
+    background-color: var(--g2-color);
+    color: var(--g5-color);
+
+    &:hover {
+      background-color: var(--g3-color);
+      color: var(--g2-color);
+    }
+  }
+  
+  &.primary {
+    background-color: var(--g2-color);
+    color: var(--g5-color);
+
+    &:hover {
+      background-color: var(--g3-color);
+      color: var(--g2-color);
+    }
   }
 
-  &:active {
-    /* background-color: var(--g5-color); */
-    background: radial-gradient(var(--g5-color), var(--g4-color));
+  .secondary {
+    background-color: var(--b2-color);
+    color: var(--g5-color);
+
+    &:hover {
+      background-color: var(--b3-color);
+      color: var(--g2-color);
+    }
   }
+
+  &.secondary {
+    background-color: var(--b2-color);
+    color: var(--g5-color);
+
+    &:hover {
+      background-color: var(--b3-color);
+      color: var(--g2-color);
+    }
+  }
+  
 
 } 
 
@@ -392,7 +437,7 @@ textarea {
 
 .grid-section {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 15px;
 }
 
