--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -7,75 +7,39 @@
   [allLocations]="allLocations"
   (filterChange)="onFilterChange($event)">
 </app-search-filter>
-<section>
-  <div class="home-row-title">
-      <button class="section-title event" [routerLink]="['/event']">Timeline</button>
-      <button class="primary add-button event" (click)="addWorldElement('event')">Add Event</button>
-  </div>
-  <div class="home-row">
-      @if (filteredEventList.length) {
-        @for(worldEvent of filteredEventList; track $index) {
-              <app-event-thumbnail [worldEvent]="worldEvent"></app-event-thumbnail>
-        }
-      } @else {
-        <div class="no-results">
-          <p>No events found. Try adjusting your search or add a new event.</p>
-        </div>
-      }
-  </div>
-</section>
 
-<section>
-  <div class="home-row-title">
-      <button class="section-title location" [routerLink]="['/location']">World</button>
-      <button class="primary add-button location" (click)="addWorldElement('location')">Add Location</button>
-  </div>
-  <div class="home-row">
-      @if (filteredLocationList.length) {
-        @for(worldLocation of filteredLocationList; track $index) {
-            <app-location-thumbnail [worldLocation]="worldLocation"></app-location-thumbnail>
-        }
-      } @else {
-        <div class="no-results">
-          <p>No locations found. Try adjusting your search or add a new location.</p>
-        </div>
-      }
-  </div> 
-</section>
-<section>
-  <div class="home-row-title">
-      <button class="section-title character" [routerLink]="['/character']">Characters</button>
-      <button class="primary add-button character" (click)="addWorldElement('character')">Add Character</button>
-  </div>
-  <div class="home-row">
-      @if (filteredCharacterList.length) {
-        <!-- Character components would go here -->
-        @for(worldCharacter of filteredCharacterList; track $index) {
-            <app-character-thumbnail [worldCharacter]="worldCharacter"></app-character-thumbnail>
-        }
-      } @else {
-        <div class="no-results">
-          <p>No characters found. Try adjusting your search or add a new character.</p>
-        </div>
-      }
-  </div>
-</section>
+<app-home-row
+  entityType="event"
+  title="Timeline"
+  routePath="/event"
+  [entities]="filteredEventList"
+  noResultsMessage="No events found. Try adjusting your search or add a new event."
+  (addElement)="addWorldElement($event)">
+</app-home-row>
 
-<section>
-  <div class="home-row-title">
-      <button class="section-title story" [routerLink]="['/story']">Stories</button>
-      <button class="primary add-button story" (click)="addWorldElement('story')">Add Story</button>
-  </div>
-  <div class="home-row">
-      @if (filteredStoryList.length) {
-        <!-- Story components would go here -->
-        @for(worldStory of filteredStoryList; track $index) {
-            <app-story-thumbnail [worldStory]="worldStory"></app-story-thumbnail>
-        }
-      } @else {
-        <div class="no-results">
-          <p>No stories found. Try adjusting your search or add a new story.</p>
-        </div>
-      }
-  </div>
-</section>
+<app-home-row
+  entityType="location"
+  title="World"
+  routePath="/location"
+  [entities]="filteredLocationList"
+  noResultsMessage="No locations found. Try adjusting your search or add a new location."
+  (addElement)="addWorldElement($event)">
+</app-home-row>
+
+<app-home-row
+  entityType="character"
+  title="Characters"
+  routePath="/character"
+  [entities]="filteredCharacterList"
+  noResultsMessage="No characters found. Try adjusting your search or add a new character."
+  (addElement)="addWorldElement($event)">
+</app-home-row>
+
+<app-home-row
+  entityType="story"
+  title="Stories"
+  routePath="/story"
+  [entities]="filteredStoryList"
+  noResultsMessage="No stories found. Try adjusting your search or add a new story."
+  (addElement)="addWorldElement($event)">
+</app-home-row>
