--- a/src/app/details/location-details/location-details.html
+++ b/src/app/details/location-details/location-details.html
@@ -1,6 +1,7 @@
 <article>
-    <section class="details-heading">
+    <section class="details-heading horizontal-section">
         <h2 class="location-title">{{ worldLocation?.name }}</h2>
+        <button class="delete-button secondary" (click)="deleteLocation()">Delete Location</button>
     </section>
     <form [formGroup]="applyForm" (submit)="submitApplication()">
         <section class="edit-location-form location-page-body">
